# meta-agent-defs

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  install.sh  lint.sh  mcp-servers.json  new-agent.sh  new-command.sh  settings.json
.beads/: config.yaml  issues.jsonl  metadata.json
.claude/: AGENTS.md  settings.json  team.yaml
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: agent-author.md  command-author.md  definition-tester.md  effectiveness-auditor.md  installer-maintainer.md  skill-author.md  (+4 more)
.fractal/: goal.md
.tacks/: tacks.db
agents/: agent-generator.md  code-reviewer.md  project-bootstrapper.md
commands/: blossom.md  consolidate.md  handoff.md  review.md  session-health.md
dev/: install-rules.sh  lint.sh  new-agent.sh  new-skill.sh  test-plugin.sh
docs/: INDEX.md  design-notes.md  domains.md  multi-human-howto.md  multi-human-intro.md  pipelines.md  primitives-cookbook.md  primitives-recipes.md  reference.md  settings.md  setup.md  team-protocol-reference.md  team-system-guide.md  usage.md
hooks/: hooks.json
prompts/: orchestrate-system.md
rules/: batch-safety.md  compaction-resilience.md  context-trust.md  delegation.md  information-architecture.md  issue-quality.md  memory-layout.md  pipe-format.md  sandbox-execution.md  task-tracker-discovery.md  team-protocol.md  test-conventions.md
scripts/: rule-relevance.sh
tools/commit-labeler/: README.md  apply_audit.py  audit.py  audit_verdict.py  benchmark.py  data.py  enrich_diffs.py  eval.py  label.py  labels.json  losses.py  pipeline.sh  pyproject.toml  registry.py  schemas.py  train.py
tools/commit-labeler/models/: __init__.py  embed_mlp.py  ensemble.py  setfit.py  tfidf_logreg.py  transformer.py
tools/git-intel/: Cargo.toml  DESIGN-daemon.md  PRECISION-STUDY.md  README.md
tools/git-intel/src/: authors.rs  cache.rs  churn.rs  common.rs  hotspots.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  ml.rs  patterns.rs  signals.rs  trends.rs
tools/git-intel/tests/: cross_project.sh  integration.rs
tools/knowledge-transfer/: pyproject.toml  transfer.py
tools/learnings-coverage/: coverage.py  pyproject.toml
(+144 files in other folders)
