[project]
name = "commit-labeler"
version = "0.1.0"
description = "Classify git commits by type using embedding-based models"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.4.2",
    "onnx>=1.17.0",
    "onnxruntime>=1.21.0",
    "onnxscript>=0.2.0",
    "pydantic-ai-slim[openai]>=1.59.0",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.2",
    "torch>=2.10.0",
    "transformers>=4.50.0",
    "datasets>=4.0.0",
    "accelerate>=1.3.0",
]
