[package]
name = "git-intel"
version = "0.1.0"
edition = "2021"
description = "Git history analyzer that outputs JSON for consumption by hooks and skills"

[features]
default = []
ml = ["ort", "tokenizers"]

[dependencies]
git2 = "0.19"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
ort = { version = "2.0.0-rc.11", features = ["load-dynamic"], optional = true }
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"], optional = true }

[dev-dependencies]
tempfile = "3"
