[project]
name = "learnings-coverage"
version = "0.1.0"
description = "Semantic coverage analysis: what % of an agent's commit-message space is captured in their learnings?"
requires-python = ">=3.10"
dependencies = [
    "sentence-transformers==3.3.1",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "pyyaml>=6.0",
]

[project.scripts]
learnings-coverage = "coverage:main"
